--- a/index.html
+++ b/index.html
@@ -12,22 +12,14 @@
         <div class="search-input-wrapper">
           <input id="search-input" class="search-input" type="text" placeholder="Найти по ФИО..."></div>
         </div>
-        <div class="organization-table">
-          <div class="organization-table__header">
-            <div class="organization-table__cell">Название</div>
-            <div class="organization-table__cell">ФИО директора</div>
-            <div class="organization-table__cell">Номер телефона</div>
-            <div class="organization-table__cell">Адрес</div>
-            <div class="organization-table__cell organization-table__cell--action">&nbsp;</div>
+        <div class="organization-table" id="organization-table">
+          <div class="organization-table__header" id="organization-table-header">
           </div>
-          <div class="organization-table__content" id="organization-table-content"></div>
+          <div class="organization-table__content" id="organization-table-content">
+          </div>
         </div>
-
         <div class="paginator-wrapper">
           <div class="paginator" id="paginator">
-            <button class="paginator__button paginator__button--prev" id="paginator-button-prev">Назад</button>
-            <div class="paginator__number-container" id="paginator-numbers"></div>
-            <button class="paginator__button paginator__button--next" id="paginator-button-next">Вперёд</button>
           </div>
         </div>
       </div>
