--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
           <div class="form-content__buttons-section buttons-section">
             <button class="buttons-section__button" id="button-cancel" type="button">Отмена</button>
-            <button class="buttons-section__button" id="button-submit" type="submit" disabled>Подтвердить</button>
+            <button class="buttons-section__button" id="button-submit" type="submit" disabled>Ок</button>
           </div>
         </form>
 
